[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/GameUI/SubtitleUI/SubtitleUI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GameUI/SubtitleUI/HistoricTextPanel/HistoricTextPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GameUI/SubtitleUI/CurrentTextLabel/CurrentTextLabel.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
resource_name = "HistoricTextFadeIn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("HistoricTextPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CurrentTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "HistoricTextFadeOut"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("HistoricTextPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CurrentTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SubtitleUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentTextLabel" parent="." instance=ExtResource( 4 )]

[node name="HistoricTextPanel" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0 )
margin_left = 0.667419
margin_right = 0.667419
custom_styles/panel = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HistoricTextFadeIn = SubResource( 2 )
anims/HistoricTextFadeOut = SubResource( 3 )

[connection signal="finished_displaying_text" from="CurrentTextLabel" to="." method="_on_CurrentTextLabel_finished_displaying_text"]
[connection signal="next_text_displayed" from="CurrentTextLabel" to="." method="_on_CurrentTextLabel_next_text_displayed"]
